# PyClarity

./: .copier-answers.yml  .env.example  .gitignore  .watch.yml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.firegeo  README.md  SEPARATION_SUMMARY.md  bulk_update_fields.py  clear-thinking-fastmcp-implementation-guide.md  clear-thinking-mcp-prompts.md  demo_custom_llm_providers.py  demo_schema_generation.py  docker-compose.yml  generated_personas_readable.txt  metrics.json  next.config.js  package.json  pyclarity-mcp-config.json  pyproject.toml  secret.key  test_database.py  test_integration.py  test_mcp_server.py  tsconfig.json
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.claude/: settings.local.json
.claude/agents/: cicd-pipeline-architect.md  cognitive-qa-validator.md  cognitive-tool-implementer.md  deployment-automation-specialist.md  fastmcp-architect.md  fastmcp-docs-generator.md  fastmcp-integration-tester.md  fastmcp-test-architect.md  parallel-workflow-orchestrator.md  pydantic-model-engineer.md
.context-portal/: project.db
.devcontainer/: devcontainer.json
agents/: cognitive-tool-implementer-prompt.md  fastmcp-architect-prompt.md  fastmcp-docs-generator-prompt.md  fastmcp-test-architect-prompt.md  pydantic-model-engineer-prompt.md
agents/outputs/: fastmcp-architect-workspace.md  fastmcp-architecture-design.md  fastmcp-docs-generator-workspace.md  fastmcp-documentation-framework.md  orchestration-status-report.md  phase2-agents-status.md
clear-thinking-fastmcp/: CLAUDE.md  INTEGRATION_TESTS_SUMMARY.md  README.md  comprehensive_tool_validation.py  parallel_validation_simple.py  phase_2c_validation.py  run_integration_tests.py  run_integration_tests_final.py  run_integration_tests_fixed.py  test_direct_import.py  test_runner.py  validate_integration.py  validate_production_readiness.py
clear-thinking-fastmcp/src/: __init__.py
clear-thinking-fastmcp/tests/: __init__.py  test_all_tools_validation.py  test_collaborative_reasoning.py  test_decision_framework.py  test_impact_propagation.py  test_integration_2_tools.py  test_integration_all_16_tools.py  test_integration_simple.py  test_metacognitive_monitoring.py  test_scientific_method.py  test_sequential_readiness.py  test_sequential_thinking.py
docs/: FASTMCP_MIGRATION.md  MCP_SETUP.md  TASK1_COMPLETION_REPORT.md  TASK2.3_MARKET_ANALYSIS_COMPLETION.md  TASK2_PROGRESS_REPORT.md  TASK2_SUBTRACTIVE_APPROACH_SUMMARY.md  abstraction-levels.md  architecture-quality-tools.md  claude-code-best-practices-comprehensive.md  claude-session-notes.md  cognitive-tool-organization.md  custom-llm-providers.md  developer-experience-ideas.md  devex-comprehensive-summary.md  mass-production-template-library.md  mcp-server-implementation-plan.md  mcp-server-implementation-status.md  naming-conventions.md  naming-decision-guide.md  progressive-as-default.md  reward-kit-implementation-guide.md  reward-kit-quick-reference.md  session-state-management.md  test-behavior-validation-strategy.md  test-container-setup.md  test-fixing-plan.md  test-fixing-summary.md  tool-migration-plan.md  tool-organization-strategy.md
docs/ai-prompting-techniques/: ARCHITECTURE_AND_PSEUDOCODE.md  README.md  auto-cot-self-consistency.md  business-frameworks.md  business-model-framework.md  combined-technique-flow.md  copywriting-meta-library.md  dynamic-prompt-rewriting.md  extended-copywriting-frameworks.md  iterative-optimizer-experiment.md  marketing-frameworks.md  mass-production-optimization.md  prompton-sitemap.md  ux-ui-frameworks.md  visual-chain-of-thought.md  visual-cot-self-consistency-dynamic-rewriting.md
docs/guides/: bdd-test-coverage-summary.md  deepeval-integration.md  deepeval-summary.md  reward-kit-integration.md  ruff-configuration-summary.md  semantic-behavior-testing-guide.md
docs/psm/: cognitive-tool-testing-summary.md  overview.md
docs/rules/: enhanced-claude-rules.md  implementation-summary.md  reference-validation-and-logging.md
docs/session-management/: implementation-plan.md
evaluation_reports/: iteration_001_report.md  iteration_002_report.md  iteration_003_report.md
examples/: decision_framework_inputs.json  demo_enhanced_rules.py  mental_models_inputs.json  progressive_sequential_thinking.py  progressive_sequential_thinking_examples.json  progressive_sequential_thinking_inputs.json  progressive_usage_example.py  run_progressive_example.py  test_minimal_progressive.py
experiment/: .env.example  .watch.yml  IMPLEMENTATION_SUMMARY.md  LLM_SETUP.md  PROJECT_STATUS.md  README.md  TECHNICAL_NOTES.md  VARIANCE_GUIDE.md  compare_variance.py  deepeval_rewards.py  evaluation_report.json  evaluator.py  features.json  latest_evaluation.md  llm_optimizer.py  llm_optimizer_enhanced.py  llm_optimizer_reward_kit.py  metrics.json  optimizer.py  optimizer_config.yaml  pyclarity_rewards.py  run_enhanced.sh  run_llm_optimizer.sh  setup_env.sh  test_deepeval_integration.py  test_reward_kit_integration.py
experiment/evaluation_reports/: iteration_013_report.md  iteration_014_report.md  iteration_015_report.md  iteration_016_report.md  iteration_017_report.md  iteration_018_report.md  (+5 more)
features/: cognitive_tool_orchestration.feature  cognitive_workflow.feature  decision_framework.feature  mcp_server_integration.feature  mental_models.feature  product_discovery_pipeline.feature  sequential_thinking.feature  triple_constraint_optimization.feature  workflow_engine.feature
history/: iteration_001.json  iteration_002.json  iteration_003.json
init-db/: 01-init-extensions.sql
reports/: mypy.xml  pytest.xml
scripts/: fix_all_test_imports.py  fix_mental_models_tests.py  fix_test_imports.py  manage_firegeo.sh  quick_validate.py  run_tests_in_container.sh  setup_firegeo.sh
snapshots/: working_demo_state.txt
templates/: new_file_template.py
tests/: __init__.py  test_cli.py  test_feature_validation.py  test_feature_validation_minimal.py  test_import.py  test_market_analysis.py  test_product_discovery.py  test_progressive_sequential_thinking.py  test_session_management.py  test_workflow_engine.py
(+249 files in other folders)
